# stylegan3

./: .gitignore  prepare_pokemon.py  pyproject.toml  tmp.py  work.md
src/stylegan3/: __init__.py
